--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "googleapis": "^171.1.0",
     "node-cron": "^4.2.1",
     "pg": "^8.18.0"
   },
