--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,13 @@
-DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DB
+PORT=3000
+
+# Local dev (outside Docker):
+DATABASE_URL=postgres://app:app@localhost:5432/app
+
+# Telegram (optional for briefing delivery)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+
+# Google OAuth2 (Calendar)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
